--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,10 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-   <div class="container">
-     <%= yield %>
-   </div>
-   <%= render 'layouts/footer' %>
+    <div class="container">
+       <%= yield %>
+       <%= render 'layouts/footer' %>
+       <%= debug(params) if Rails.env.development? %>
+    </div>
   </body>
 </html>
